--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-h1  {
+h1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 4dvw;
     text-align: center;
@@ -6,19 +6,41 @@ h1  {
     margin-top: 0;
 }
 
-p  {
+p {
     font-size: 1dvw;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: aliceblue;
 }
 
-header  {
+header {
     background-color: rgb(69, 69, 255);
 }
 
-footer  {
+main {
+    background-color: white;
+}
+
+.resolucion {
+    display: flex;
+    justify-content: center;
+}
+
+.resolucion ul  {
+    margin-bottom: 45dvh;
+}
+
+li {
+    font-size: 1.5dvw;
+    list-style: none;
+    margin-bottom: 2dvh;
+}
+
+a {
+    text-decoration: none;
+}
+
+footer {
     background-color: rgb(69, 69, 255);
     margin-bottom: 0;
 }
-
